<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>SelectNoteDialog</class>
 <widget class="QDialog" name="SelectNoteDialog">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>403</width>
    <height>454</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Select notes</string>
  </property>
  <layout class="QHBoxLayout" name="horizontalLayout">
   <item>
    <layout class="QVBoxLayout" name="verticalLayout">
     <property name="leftMargin">
      <number>9</number>
     </property>
     <property name="topMargin">
      <number>9</number>
     </property>
     <property name="rightMargin">
      <number>9</number>
     </property>
     <property name="bottomMargin">
      <number>9</number>
     </property>
     <item>
      <widget class="QGroupBox" name="select">
       <property name="title">
        <string>Select</string>
       </property>
       <layout class="QGridLayout" name="gridLayout_2">
        <item row="3" column="0">
         <widget class="QCheckBox" name="sameType">
          <property name="text">
           <string>Same type:</string>
          </property>
         </widget>
        </item>
        <item row="5" column="1">
         <widget class="QLabel" name="durationTicks">
          <property name="text">
           <string/>
          </property>
         </widget>
        </item>
        <item row="8" column="0">
         <widget class="QCheckBox" name="sameVoice">
          <property name="text">
           <string>Same voice</string>
          </property>
         </widget>
        </item>
        <item row="9" column="0">
         <widget class="QCheckBox" name="sameChordVoice">
          <property name="text">
           <string>Same chord voice</string>
          </property>
         </widget>
        </item>
        <item row="1" column="0">
         <widget class="QCheckBox" name="samePitch">
          <property name="text">
           <string>Same pitch:</string>
          </property>
         </widget>
        </item>
        <item row="4" column="1">
         <widget class="QLabel" name="durationType">
          <property name="text">
           <string/>
          </property>
         </widget>
        </item>
        <item row="7" column="0">
         <widget class="QCheckBox" name="sameStaff">
          <property name="text">
           <string>Same staff</string>
          </property>
         </widget>
        </item>
        <item row="6" column="0">
         <widget class="QCheckBox" name="sameName">
          <property name="text">
           <string>Same note name:</string>
          </property>
         </widget>
        </item>
        <item row="3" column="1">
         <widget class="QLabel" name="type">
          <property name="text">
           <string/>
          </property>
         </widget>
        </item>
        <item row="6" column="1">
         <widget class="QLabel" name="name">
          <property name="text">
           <string/>
          </property>
         </widget>
        </item>
        <item row="5" column="0">
         <widget class="QCheckBox" name="sameDurationTicks">
          <property name="text">
           <string>Same duration:</string>
          </property>
         </widget>
        </item>
        <item row="0" column="0">
         <widget class="QCheckBox" name="sameNotehead">
          <property name="text">
           <string>Same notehead:</string>
          </property>
         </widget>
        </item>
        <item row="7" column="1">
         <widget class="QCheckBox" name="inSelection">
          <property name="text">
           <string>In selection</string>
          </property>
         </widget>
        </item>
        <item row="1" column="1">
         <widget class="QLabel" name="pitch">
          <property name="text">
           <string/>
          </property>
         </widget>
        </item>
        <item row="0" column="1">
         <widget class="QLabel" name="notehead">
          <property name="text">
           <string/>
          </property>
         </widget>
        </item>
        <item row="8" column="1" colspan="2">
         <widget class="QCheckBox" name="sameSystem">
          <property name="text">
           <string>Same system</string>
          </property>
         </widget>
        </item>
        <item row="2" column="0">
         <widget class="QCheckBox" name="sameString">
          <property name="text">
           <string>Same string:</string>
          </property>
         </widget>
        </item>
        <item row="4" column="0">
         <widget class="QCheckBox" name="sameDurationType">
          <property name="text">
           <string>Same note type:</string>
          </property>
         </widget>
        </item>
        <item row="2" column="1">
         <widget class="QLabel" name="string">
          <property name="text">
           <string/>
          </property>
         </widget>
        </item>
        <item row="10" column="0">
         <widget class="QCheckBox" name="sameBeat">
          <property name="text">
           <string>Same beat</string>
          </property>
         </widget>
        </item>
        <item row="9" column="1">
         <widget class="QCheckBox" name="sameMeasure">
          <property name="text">
           <string>Same measure</string>
          </property>
         </widget>
        </item>
       </layout>
      </widget>
     </item>
     <item>
      <widget class="QGroupBox" name="action">
       <property name="title">
        <string>Action</string>
       </property>
       <layout class="QGridLayout" name="gridLayout">
        <item row="0" column="0">
         <widget class="QRadioButton" name="replace">
          <property name="text">
           <string>Replace selection</string>
          </property>
          <property name="checked">
           <bool>true</bool>
          </property>
         </widget>
        </item>
        <item row="0" column="1">
         <widget class="QRadioButton" name="add">
          <property name="text">
           <string>Add to selection</string>
          </property>
         </widget>
        </item>
        <item row="1" column="0">
         <widget class="QRadioButton" name="fromSelection">
          <property name="visible">
           <bool>false</bool>
          </property>
          <property name="text">
           <string>Search in selection</string>
          </property>
         </widget>
        </item>
        <item row="1" column="1">
         <widget class="QRadioButton" name="subtract">
          <property name="text">
           <string>Subtract from selection</string>
          </property>
         </widget>
        </item>
       </layout>
      </widget>
     </item>
     <item>
      <widget class="QDialogButtonBox" name="buttonBox">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
         <horstretch>0</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
       </property>
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
       <property name="standardButtons">
        <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
       </property>
      </widget>
     </item>
    </layout>
   </item>
  </layout>
 </widget>
 <tabstops>
  <tabstop>sameNotehead</tabstop>
  <tabstop>samePitch</tabstop>
  <tabstop>sameString</tabstop>
  <tabstop>sameType</tabstop>
  <tabstop>sameDurationType</tabstop>
  <tabstop>sameDurationTicks</tabstop>
  <tabstop>sameName</tabstop>
  <tabstop>sameStaff</tabstop>
  <tabstop>inSelection</tabstop>
  <tabstop>sameVoice</tabstop>
  <tabstop>sameSystem</tabstop>
  <tabstop>sameChordVoice</tabstop>
  <tabstop>sameMeasure</tabstop>
  <tabstop>sameBeat</tabstop>
  <tabstop>replace</tabstop>
  <tabstop>add</tabstop>
  <tabstop>subtract</tabstop>
 </tabstops>
 <resources/>
 <connections/>
</ui>
